# Evaluating-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  run.py
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: agent_workflow.py  llm_service.py  ocr_service.py
app/utils/: task_manager.py
docs/: 智能体设计框架.docx
static/: app.js  index.html  styles.css
tests/: test_llm_services.py  test_ocr_service.py
tests/assets/: sample_essay.md  sample_prompt.txt
